# drivepilot-simulator

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md
carport_sdk/: __init__.py
carport_sdk/core/: __init__.py  events.py  models.py  simulator.py
carport_sdk/features/: __init__.py  driver_monitoring.py  obstacle_detection.py  ota_updates.py  regulatory_mode.py  speed_limiting.py
carport_sdk/utils/: __init__.py  logging.py  time_utils.py  validation.py
content/: ideas.md  transcript.md
docs/: api.md
drivepilot_simulator/: __init__.py
drivepilot_simulator/core/: __init__.py  car.py  environment.py  events.py
examples/: basic_example.py  basic_simulation.py  driver_monitoring_test.py  final_demo.py  minimal_demo.py  quick_demo.py  test_scenarios.py
tests/: __init__.py  conftest.py  test_core.py  test_driver_monitoring.py
