[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drivepilot-simulator"
version = "0.1.0"
description = "A comprehensive car simulator for autonomous driving software development"
authors = [
    {name = "OEMagic Engineering Team", email = "engineering@oemagic.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["autonomous", "driving", "simulator", "car", "automotive"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.20.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]

[project.urls]
Homepage = "https://github.com/mc5eamus/drivepilot-simulator"
Documentation = "https://github.com/mc5eamus/drivepilot-simulator/blob/main/README.md"
Repository = "https://github.com/mc5eamus/drivepilot-simulator"
Issues = "https://github.com/mc5eamus/drivepilot-simulator/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["drivepilot_simulator*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true